updating luc 11.x build

--- a/custom_builds/67/distros/11.x/pom.xml
+++ b/custom_builds/67/distros/11.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>evaluation</module>
                 <module>bigbluebutton-sakai</module>
                 <module>adobeconnect</module>
+                <module>kaltura</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
