--- a/custom_builds/51/distros/10.x-dev/pom.xml
+++ b/custom_builds/51/distros/10.x-dev/pom.xml
@@ -127,6 +127,7 @@
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
                 <module>kaltura</module>
+                <module>cloud-content</module>
             </modules>
         </profile>
         <profile>
