--- a/custom_builds/168/distros/11.x/pom.xml
+++ b/custom_builds/168/distros/11.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>student-engagement</module>
                 <module>content-review/contentreview-impl-vericite</module>
                 <module>reference</module>
+                <module>snap-poll</module>
             </modules>
         </profile>
         <profile>
