--- a/webservices/sakai-11.x-rsmart/cxf/pom.xml
+++ b/webservices/sakai-11.x-rsmart/cxf/pom.xml
@@ -128,6 +128,18 @@
         </dependency> 
         <!--  external dependencies -->
         <dependency>
+            <groupId>com.rsmart</groupId>
+            <artifactId>rsmart-decryption-api</artifactId>
+            <version>${sakai.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.rsmart</groupId>
+            <artifactId>customer-int-api</artifactId>
+            <version>${sakai.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
