Use JdbcTemplate as SimpleJdbcTemplate was deprecated. http://stackoverflow.com/questions/3365359/java-spring-jdbctemplate

--- a/custom_builds/155/rsmart/sakai-11.x/pom.xml
+++ b/custom_builds/155/rsmart/sakai-11.x/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>customer</module>
     <module>user</module>
+    <module>rsmart-Decryption</module>
     <module>util</module>
     <module>user-data-service</module>
   </modules>
