--- a/webservices/sakai-11.x/cxf/pom.xml
+++ b/webservices/sakai-11.x/cxf/pom.xml
@@ -16,7 +16,7 @@
     </parent>
 
     <properties>
-        <cxf.version>2.7.18</cxf.version>
+        <cxf.version>3.1.7</cxf.version>
     </properties>
 
     <dependencies>
@@ -39,6 +39,12 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-transports-local</artifactId>
+            <version>${cxf.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-rs-client</artifactId>
             <version>${cxf.version}</version>
             <scope>test</scope>
         </dependency>
