move tii directory

--- a/custom_builds/104/distros/11.x/pom.xml
+++ b/custom_builds/104/distros/11.x/pom.xml
@@ -118,7 +118,7 @@
                 <module>blogwow</module>
                 <module>webservices</module>
                 <module>bbb-tool</module>
-                <module>content-review/contentreview-impl</module>
+                <module>content-review/turnitin</module>
             </modules>
         </profile>
         <profile>
