--- a/custom_builds/171/distros/sakai-10.x/pom.xml
+++ b/custom_builds/171/distros/sakai-10.x/pom.xml
@@ -127,6 +127,7 @@
                 <module>clog</module>
                 <module>gradebook2</module>
                 -->
+                <module>kaltura-kaf</module>
             </modules>
         </profile>
         <profile>
