--- a/custom_builds/170/distros/11.x/pom.xml
+++ b/custom_builds/170/distros/11.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>evaluation</module>
                 <module>clog</module>
                 <module>certification</module>
+                <module>attendance</module>
                 <!--
                 <module>rsmart</module>
                 <module>gradebook2</module>
