--- a/custom_builds/1/distros/11.x/pom.xml
+++ b/custom_builds/1/distros/11.x/pom.xml
@@ -59,9 +59,8 @@
                 <module>cloud-content</module>
                 <module>content</module>
                 <module>content-review</module>
-                <module>content-review/contentreview-impl-vericite</module>
+                <module>content-review/turnitin</module>
                 <module>courier</module>
-                <module>dashboard</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
                 <module>deploy</module>
@@ -117,10 +116,11 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+
                 <module>blogwow</module>
                 <module>evaluation</module>
-                <module>da_evalprovider</module>
-                <module>attendance</module>
+                <module>etudes-util</module>
+                <module>melete</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
