--- a/custom_builds/67/distros/11.x/pom.xml
+++ b/custom_builds/67/distros/11.x/pom.xml
@@ -118,9 +118,10 @@
 
                 <module>blogwow</module>
                 <module>evaluation</module>
-                <module>bigbluebutton-sakai</module>
                 <module>adobeconnect</module>
                 <module>kaltura</module>
+                <module>wicket-for-scorm</module>
+                <module>scorm</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
