--- a/custom_builds/11/distros/2.9.x/pom.xml
+++ b/custom_builds/11/distros/2.9.x/pom.xml
@@ -222,6 +222,7 @@
                 
                 <!-- Experimental -->
                 <module>hybrid</module>
+                <module>cloud-content</module>
                 <!-- <module>roster2</module> -->
             </modules>
         </profile>
