--- a/custom_builds/3/distros/10.x/pom.xml
+++ b/custom_builds/3/distros/10.x/pom.xml
@@ -62,6 +62,7 @@
                 <module>common</module>
                 <module>config</module>
                 <module>content</module>
+                <module>cloud-content</module>
                 <module>content-review</module>
                 <module>content-review/contentreview-impl-vericite</module>
                 <module>courier</module>
