--- a/custom_builds/60/distros/10.x/pom.xml
+++ b/custom_builds/60/distros/10.x/pom.xml
@@ -62,6 +62,7 @@
                 <module>common</module>
                 <module>config</module>
                 <module>content</module>
+                <module>cloud-content</module>
                 <module>content-review</module>
                 <module>courier</module>
                 <module>dav</module>
