cloud-content kernel backport for aws s3

--- a/custom_builds/25/distros/10.x/pom.xml
+++ b/custom_builds/25/distros/10.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>blogwow</module>
                 <module>evaluation</module>
                 <module>gradebook-export</module>
+                <module>cloud-content</module>
               <!--  <module>bigbluebutton-sakai/bbb-tool</module> -->
             </modules>
         </profile>
