remove kaltura from build

--- a/custom_builds/3/distros/10.x/pom.xml
+++ b/custom_builds/3/distros/10.x/pom.xml
@@ -123,7 +123,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>warehouse</module>
-                <module>kaltura</module>
+                <!--module>kaltura</module-->
                 <!--module>bbb-tool</module-->
             </modules>
         </profile>
