--- a/custom_builds/6/distros/11.x/pom.xml
+++ b/custom_builds/6/distros/11.x/pom.xml
@@ -61,7 +61,6 @@
                 <module>content-review</module>
                 <module>content-review/contentreview-impl-vericite</module>
                 <module>courier</module>
-                <module>dashboard</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
                 <module>deploy</module>
@@ -121,6 +120,7 @@
                 <module>evaluation</module>
                 <module>da_evalprovider</module>
                 <module>attendance</module>
+                <module>bigbluebutton</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
