Adding vericite to build

--- a/sakai/branches/sakai-11.x/pom.xml
+++ b/sakai/branches/sakai-11.x/pom.xml
@@ -59,7 +59,7 @@
                 <module>cloud-content</module>
                 <module>content</module>
                 <module>content-review</module>
-                <module>content-review/contentreview-impl-vericite</module>
+                <module>vericite</module>
                 <module>courier</module>
                 <module>dashboard</module>
                 <module>dav</module>
