--- a/custom_builds/164/rsmart/sakai-11.x/pom.xml
+++ b/custom_builds/164/rsmart/sakai-11.x/pom.xml
@@ -17,6 +17,7 @@
     <module>rsmart-Decryption</module>
     <module>util</module>
     <module>user-data-service</module>
+    <module>providers</module>
   </modules>
     <dependencyManagement>
         <dependencies>
