--- a/custom_builds/29/distros/11.x/pom.xml
+++ b/custom_builds/29/distros/11.x/pom.xml
@@ -119,6 +119,7 @@
                 <module>blogwow</module>
                 <module>etudes-util</module>
                 <module>melete</module>
+                <module>bbb-tool</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
