--- a/custom_builds/29/distros/11.x/pom.xml
+++ b/custom_builds/29/distros/11.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>bbb-tool</module>
+                <module>attendance</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
