--- a/custom_builds/9/distros/10.x/pom.xml
+++ b/custom_builds/9/distros/10.x/pom.xml
@@ -121,7 +121,9 @@
                 <module>evaluation</module>
                 <module>bigbluebutton-sakai/bbb-tool</module>
                 <module>content-review/contentreview-impl</module>
+                <module>attendance</module>
                 <module>da_evalprovider</module>
+                <module>cloud-content</module>
             </modules>
         </profile>
         <profile>
