Adding bbb to pom

--- a/custom_builds/112/distros/11.x/pom.xml
+++ b/custom_builds/112/distros/11.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>clog</module>
                 <module>batch-user-creation</module>
                 <module>sis_integration</module>
+                <module>bbb-tool</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
