--- a/custom_builds/164/distros/11.x/pom.xml
+++ b/custom_builds/164/distros/11.x/pom.xml
@@ -120,6 +120,9 @@
 
                 <module>gradebook2</module>
                 <module>rsmart</module>
+                <module>blogwow</module>
+                <module>etudes-util</module>
+                <module>melete</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
