Adding sms to build

--- a/custom_builds/5/distros/11.x/pom.xml
+++ b/custom_builds/5/distros/11.x/pom.xml
@@ -119,6 +119,7 @@
                 <module>blogwow</module>
                 <module>evaluation</module>
                 <module>qna</module>
+                <module>sms</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
