--- a/custom_builds/155/rsmart/sakai-11.x/rsmart-Decryption/util/pom.xml
+++ b/custom_builds/155/rsmart/sakai-11.x/rsmart-Decryption/util/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>rsmart-decryption-util</artifactId>
     <name>rsmart-decryption-util</name>
     <packaging>jar</packaging>
-    <version>${sakai.version}</version>
+    <version>11-SNAPSHOT</version>
 
     <build>
         <plugins>
