--- a/custom_builds/166/distros/11.x/pom.xml
+++ b/custom_builds/166/distros/11.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>webservices</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
+                <module>rsmart</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
