Removing gb2 from build

--- a/custom_builds/154/distros/10.x/pom.xml
+++ b/custom_builds/154/distros/10.x/pom.xml
@@ -117,7 +117,7 @@
                 <module>content-review/contentreview-impl</module>
                 <module>etudes-util</module>
                 <module>melete</module>
-                <module>gradebook2</module>
+                <!--module>gradebook2</module-->
                 <module>evaluation</module>
                 <module>metaobj</module>
                 <module>rsmart/common</module>
