svn merge -r 325614:325618 ^/msub/longsight.com/webservices/sakai-11.x

--- a/webservices/sakai-11.x-rsmart/cxf/pom.xml
+++ b/webservices/sakai-11.x-rsmart/cxf/pom.xml
@@ -88,8 +88,6 @@
 		<dependency>
 	      	<groupId>org.sakaiproject.shortenedurl</groupId>
 	      	<artifactId>shortenedurl-api</artifactId>
-	      	<version>${project.version}</version>
-            <scope>provided</scope>
 	    </dependency>
         <dependency>
             <groupId>org.sakaiproject.assignment</groupId>
@@ -102,11 +100,14 @@
     <dependency>
       <groupId>org.sakaiproject.edu-services.gradebook</groupId>
       <artifactId>gradebook-service-hibernate</artifactId>
-      <scope>provided</scope>
     </dependency>
         <dependency>
             <groupId>org.sakaiproject.msgcntr</groupId>
             <artifactId>messageforums-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.lessonbuilder</groupId>
+            <artifactId>lessonbuilder-api</artifactId>
         </dependency>
         <dependency>
           <groupId>org.sakaiproject.samigo</groupId>
@@ -123,8 +124,6 @@
         <dependency>
           <groupId>org.quartz-scheduler</groupId>
           <artifactId>quartz</artifactId>
-          <version>${sakai.quartz.version}</version>
-          <scope>provided</scope>
         </dependency> 
         <!--  external dependencies -->
         <dependency>
