--- a/custom_builds/167/distros/rsmart-10.x/pom.xml
+++ b/custom_builds/167/distros/rsmart-10.x/pom.xml
@@ -142,6 +142,7 @@
                 <module>taggable</module>
                 <module>turnitin/contentreview-impl</module>
 		        <module>irubric</module>
+		        <module>mediasite</module>
             </modules>
         </profile>
         <profile>
