dont build rsmart code

--- a/custom_builds/170/distros/11.x/pom.xml
+++ b/custom_builds/170/distros/11.x/pom.xml
@@ -121,7 +121,7 @@
                 <module>evaluation</module>
                 <module>clog</module>
                 <module>attendance</module>
-                <module>rsmart</module>
+                <!--module>rsmart</module-->
                 <module>certification</module>
                 <module>gradebook2</module>
             </modules>
