--- a/custom_builds/155/distros/10.x/pom.xml
+++ b/custom_builds/155/distros/10.x/pom.xml
@@ -117,7 +117,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>metaobj</module>
-                <module>gradebook2</module>
+                <!--module>gradebook2</module-->
                 <module>rsmart</module>
                 <module>cloud-content</module>
                 <module>clog</module>
