Adding attendance tool

--- a/custom_builds/152/distros/sakai-10.x/pom.xml
+++ b/custom_builds/152/distros/sakai-10.x/pom.xml
@@ -437,6 +437,7 @@
 				<module>taggable/taggable-hbm/hbm</module>
 				<module>userauditservice/api</module>
 				<module>warehouse/warehouse-api/api</module>
+				<module>attendance</module>
 			</modules>
 		</profile>
         <profile>
