--- a/custom_builds/164/distros/11.x/pom.xml
+++ b/custom_builds/164/distros/11.x/pom.xml
@@ -126,6 +126,7 @@
                 <module>melete</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
+                <module>certification</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
