--- a/custom_builds/6/distros/11.x/pom.xml
+++ b/custom_builds/6/distros/11.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>da_evalprovider</module>
                 <module>attendance</module>
                 <module>bigbluebutton</module>
+                <module>iclicker</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
