52271 add tii to build

--- a/custom_builds/67/distros/11.x/pom.xml
+++ b/custom_builds/67/distros/11.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>adobeconnect</module>
                 <module>kaltura</module>
                 <module>scorm</module>
+                <module>content-review/turnitin</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
