Adding gb2 and qna to build

--- a/custom_builds/179/distros/11.x/pom.xml
+++ b/custom_builds/179/distros/11.x/pom.xml
@@ -119,6 +119,9 @@
                 <module>blogwow</module>
                 <module>certification</module>
                 <module>rsmart</module>
+                <module>qna</module>
+                <module>sms</module>
+                <module>gradebook2</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
