Adding attendance tool

--- a/custom_builds/167/distros/sakai-11.x/pom.xml
+++ b/custom_builds/167/distros/sakai-11.x/pom.xml
@@ -117,7 +117,7 @@
                 <module>webservices</module>
                 <module>clog</module>
                 <module>evaluation</module>
-
+                <module>attendance</module>
                 <module>gradebook2</module>
                 <module>rsmart</module>
             </modules>
