--- a/assignment/assignment-10.x_iRubric/assignment-bundles/resources/assignment.properties
+++ b/assignment/assignment-10.x_iRubric/assignment-bundles/resources/assignment.properties
@@ -112,7 +112,7 @@ gen.grading				= Grading
 gen.group	 = Group
 gen.group	 = Groups
 gen.subformat = Select the format for student submission
-group.issubmit   = Are submissions for a group?
+group.issubmit   = Is this a collaborative group submission?
 gen.groupassignment	= Group Submission
 gen.userassignment  = Individual Submission
 gen.section.info    = Section (do not use for group submissions)
@@ -493,7 +493,7 @@ youmust7 = You must type in your answer in the text input area before submission
 list.show = Show
 list.itemsper = items...
 update = Update
-removeSelected = Removed Selected
+removeSelected = Remove Selected
 subasstudent		= Submit as Student
 alert.globalNavi	= If you choose to exit without clicking any of the assignment submission navigation action buttons at the top or bottom of this page, you will lose your work. Please choose one of these buttons or navigate to your chosen page and abandon your work on this page.
 viewassign		= View Assignment
@@ -554,7 +554,7 @@ grades.grade=grade
 grades.members=Users
 #group related variables
 displayto.site = Display to site
-displayto.selected = Display to selected groups
+displayto.selected = Display only to selected groups
 
 range.allgroups = site
 
@@ -654,6 +654,7 @@ uploadall.choose.file.gradeFile.csv=CSV format, file grades.csv
 uploadall.choose.file.gradeFile.excel=EXCEL format, file grades.xls
 uploadall.choose.file.feedbackTexts=Feedback text (the inline comments with student submission)
 uploadall.choose.file.feedbackComments=Feedback comments (comments.txt file if available in student's folder. Comments are put into the Instructor Comments field for each student's submission)
+uploadall.choose.file.includeNotSubmitted=Include students who have not yet submitted
 uploadall.choose.file.confirm = You have selected the archive file for uploading. Files contained in the archive will be uploaded to the corresponding student submission for the assignment.
 uploadall.releaseOption=Select release option
 uploadall.releaseOption.yes=Release uploaded information to students
