--- a/custom_builds/60/distros/10.x/pom.xml
+++ b/custom_builds/60/distros/10.x/pom.xml
@@ -64,6 +64,7 @@
                 <module>content</module>
                 <module>cloud-content</module>
                 <module>content-review</module>
+                <module>content-review/contentreview-impl-vericite</module>
                 <module>courier</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
