--- a/custom_builds/152/distros/sakai-11.x/pom.xml
+++ b/custom_builds/152/distros/sakai-11.x/pom.xml
@@ -119,6 +119,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>gradebook2</module>
+                <module>attendance</module>
                 <module>rsmart</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
