--- a/custom_builds/152/distros/sakai-10.x/pom.xml
+++ b/custom_builds/152/distros/sakai-10.x/pom.xml
@@ -101,7 +101,6 @@
                 <module>presence</module>
                 <module>providers</module>
                 <module>profile2</module>
-                <!-- module>bigbluebutton</module -->
 		        <!-- <module>dashboard</module> -->
                 <!--module>gradebook2</module-->
                 <!--
@@ -142,6 +141,7 @@
                 <module>reset-pass</module>
                 <module>taggable</module>
 		        <module>irubric</module>
+                <module>bbb-tool</module>
             </modules>
         </profile>
         <profile>
