--- a/custom_builds/14/distros/10.x/pom.xml
+++ b/custom_builds/14/distros/10.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>content-review/contentreview-impl</module>
                 <module>melete</module>
                 <module>etudes-util</module>
+                <module>sipx</module>
             </modules>
         </profile>
         <profile>
