--- a/custom_builds/51/distros/11.x/pom.xml
+++ b/custom_builds/51/distros/11.x/pom.xml
@@ -121,8 +121,8 @@
                 <module>etudes-util</module>
                 <module>kaltura</module>
                 <module>content-review/turnitin</module>
-                <!--module>irubric-core</module>
-                <module>irubric-tool</module-->
+                <module>irubric-core</module>
+                <module>irubric-tool</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
