--- a/custom_builds/144/distros/11.x/pom.xml
+++ b/custom_builds/144/distros/11.x/pom.xml
@@ -76,7 +76,7 @@
                 <module>jsf</module>
                 <module>kernel</module>
                 <module>lessonbuilder</module>
-                <module>library</module>
+                <module>reference</module>
                 <module>login</module>
                 <module>mailarchive</module>
                 <module>mailsender</module>
