Adding bbb to pom

--- a/custom_builds/172/distros/11.x/pom.xml
+++ b/custom_builds/172/distros/11.x/pom.xml
@@ -116,6 +116,7 @@
                 <module>web</module>
                 <module>webservices</module>
                 <module>gradebook2</module>
+                <module>blogwow</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
