WFU build add sakora-csv and vericite

--- a/custom_builds/172/distros/11.x/pom.xml
+++ b/custom_builds/172/distros/11.x/pom.xml
@@ -116,7 +116,8 @@
                 <module>web</module>
                 <module>webservices</module>
                 <module>blogwow</module>
-                <module>gradebook2</module>
+                <module>sakora-csv</module>
+                <module>vericite</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
