--- a/custom_builds/142/distros/11.x/pom.xml
+++ b/custom_builds/142/distros/11.x/pom.xml
@@ -122,8 +122,9 @@
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
                 <module>SakaiXAPI-Provider</module>
-                <module>gradebook2</module>
+                <module>bbb-tool</module>
                 <!--
+                <module>gradebook2</module>
                 -->
             </modules>
         </profile>
