OSP still needs metaobj

--- a/custom_builds/3/distros/11.x/pom.xml
+++ b/custom_builds/3/distros/11.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>kaltura</module>
+                <module>metaobj</module>
                 <module>osp</module>
             </modules>
         </profile>
