Adding gb2 to build

--- a/custom_builds/176/distros/11.x/pom.xml
+++ b/custom_builds/176/distros/11.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>webservices</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
+                <module>gradebook2</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
