--- a/custom_builds/167/distros/sakai-11.x/pom.xml
+++ b/custom_builds/167/distros/sakai-11.x/pom.xml
@@ -91,6 +91,7 @@
                 <module>presence</module>
                 <module>profile2</module>
                 <module>providers</module>
+                <module>reference</module>
                 <module>reset-pass</module>
                 <module>rights</module>
                 <module>roster2</module>
