54080 clog and blogwow and certification

--- a/custom_builds/165/distros/sakai-11.x/pom.xml
+++ b/custom_builds/165/distros/sakai-11.x/pom.xml
@@ -120,6 +120,8 @@
 
                 <module>gradebook2</module>
                 <module>rsmart</module>
+                <module>blogwow</module>
+                <module>certification</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
