Adding attendance to build

--- a/custom_builds/14/distros/11.x/pom.xml
+++ b/custom_builds/14/distros/11.x/pom.xml
@@ -119,6 +119,7 @@
                 <module>blogwow</module>
                 <module>etudes-util</module>
                 <module>melete</module>
+                <module>attendance</module>
                 <module>content-review/turnitin</module>
             </modules>
         </profile>
