Add gradebook-export for Starfish

--- a/custom_builds/159/distros/11.x/pom.xml
+++ b/custom_builds/159/distros/11.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>webservices</module>
                 <module>bbb-tool</module>
                 <module>attendance</module>
+                <module>gradebook-export</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
