Adding eval to build

--- a/custom_builds/180/distros/11.x/pom.xml
+++ b/custom_builds/180/distros/11.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>webservices</module>
                 <module>blogwow</module>
                 <module>attendance</module>
+                <module>evaluation</module>
                 <module>bbb-tool</module>
             </modules>
         </profile>
