--- a/custom_builds/103/distros/11.x/pom.xml
+++ b/custom_builds/103/distros/11.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>webservices</module>
 
                 <module>evaluation</module>
+                <module>certification</module>
                 <module>content-review/contentreview-impl-vericite</module>
             </modules>
         </profile>
