--- a/custom_builds/163/distros/11.x/pom.xml
+++ b/custom_builds/163/distros/11.x/pom.xml
@@ -122,6 +122,7 @@
                 <module>etudes-util</module>
                 <module>bbb-tool</module>
                 <module>content-review/turnitin</module>
+                <module>da_evalprovider</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
