Adding bbb to build

--- a/custom_builds/152/distros/sakai-11.x/pom.xml
+++ b/custom_builds/152/distros/sakai-11.x/pom.xml
@@ -125,6 +125,7 @@
                 <module>blogwow</module>
                 <module>clog</module>
                 <module>vericite</module>
+                <module>bbb-tool</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
