Adding reference to build

--- a/custom_builds/25/distros/11.x/pom.xml
+++ b/custom_builds/25/distros/11.x/pom.xml
@@ -92,6 +92,7 @@
                 <module>profile2</module>
                 <module>providers</module>
                 <module>reset-pass</module>
+                <module>reference</module>
                 <module>rights</module>
                 <module>roster2</module>
                 <module>rsf</module>
