--- a/custom_builds/147/login/sakai-10.x/login-impl/impl/pom.xml
+++ b/custom_builds/147/login/sakai-10.x/login-impl/impl/pom.xml
@@ -49,6 +49,10 @@
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity</artifactId>
     </dependency>
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+	</dependency>
   </dependencies>
   <build>
     <resources />
