Fix Lombok dependency

--- a/custom_builds/147/login/sakai-10.x/login-tool/tool/pom.xml
+++ b/custom_builds/147/login/sakai-10.x/login-tool/tool/pom.xml
@@ -149,6 +149,10 @@
           <artifactId>spring-security-web</artifactId>
           <version>${sakai.spring.version}</version>
       </dependency>
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+	</dependency>
 
   </dependencies>
   <build>
