--- a/custom_builds/159/distros/sakai-10.x/pom.xml
+++ b/custom_builds/159/distros/sakai-10.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>bbb-tool</module>
+                <module>gradebook-export</module>
 
                 <!--
                 <module>gradebook2</module>
