mv sipx-private/sipx

--- a/custom_builds/14/distros/11.x/pom.xml
+++ b/custom_builds/14/distros/11.x/pom.xml
@@ -121,7 +121,7 @@
                 <module>melete</module>
                 <module>attendance</module>
                 <module>content-review/turnitin</module>
-                <module>sipx-private</module>
+                <module>sipx</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
