add gb2 to build

--- a/custom_builds/152/distros/sakai-11.x/pom.xml
+++ b/custom_builds/152/distros/sakai-11.x/pom.xml
@@ -129,6 +129,7 @@
                 <module>vericite</module>
                 <module>bbb-tool</module>
                 <module>certification</module>
+                <module>gradebook2</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
