--- a/custom_builds/171/distros/11.x/pom.xml
+++ b/custom_builds/171/distros/11.x/pom.xml
@@ -59,6 +59,7 @@
                 <module>cloud-content</module>
                 <module>content</module>
                 <module>content-review</module>
+                <module>content-review/turnitin</module>
                 <module>courier</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
