--- a/custom_builds/172/distros/11.x/pom.xml
+++ b/custom_builds/172/distros/11.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>sakora-csv</module>
                 <module>vericite</module>
                 <module>assignment2</module>
+                <module>attendance</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
