disable rsmart to get build working

--- a/custom_builds/149/distros/11.x/pom.xml
+++ b/custom_builds/149/distros/11.x/pom.xml
@@ -119,7 +119,9 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>evaluation</module>
+                <!-- requires gb2 to build right now
                 <module>rsmart</module>
+                -->
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
