--- a/custom_builds/147/distros/11.x/pom.xml
+++ b/custom_builds/147/distros/11.x/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>master</artifactId>
         <groupId>org.sakaiproject</groupId>
         <version>11-SNAPSHOT</version>
-        <relativePath>master/pom.xml</relativePath>
+        <relativePath>.master/pom.xml</relativePath>
     </parent>
 
     <name>Sakai base pom</name>
