Adding vericite to build

--- a/custom_builds/167/distros/sakai-11.x/pom.xml
+++ b/custom_builds/167/distros/sakai-11.x/pom.xml
@@ -60,6 +60,7 @@
                 <module>content</module>
                 <module>content-review</module>
                 <module>content-review/turnitin</module>
+                <module>vericite</module>
                 <module>courier</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
