--- a/custom_builds/176/distros/11.x/pom.xml
+++ b/custom_builds/176/distros/11.x/pom.xml
@@ -117,6 +117,8 @@
                 <module>webservices</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
+                <module>etudes-util</module>
+                <module>melete</module>
                 <module>gradebook2</module>
             </modules>
         </profile>
