--- a/custom_builds/17/distros/11.x/pom.xml
+++ b/custom_builds/17/distros/11.x/pom.xml
@@ -115,6 +115,7 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>attendance</module>
                 <module>blogwow</module>
                 <module>bbb-tool</module>
             </modules>
