--- a/sakai/branches/sakai-12.x/pom.xml
+++ b/sakai/branches/sakai-12.x/pom.xml
@@ -75,7 +75,7 @@
                 <module>jsf</module>
                 <module>kernel</module>
                 <module>lessonbuilder</module>
-                <module>library</module>
+                <!--module>library</module-->
                 <module>login</module>
                 <module>mailarchive</module>
                 <module>mailsender</module>
