--- a/custom_builds/25/distros/11.x/pom.xml
+++ b/custom_builds/25/distros/11.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>web</module>
                 <module>webservices</module>
 
+                <module>attendance</module>
                 <module>blogwow</module>
                 <module>etudes-util</module>
                 <module>melete</module>
