--- a/webservices/sakai-12.x/cxf/pom.xml
+++ b/webservices/sakai-12.x/cxf/pom.xml
@@ -16,7 +16,7 @@
     </parent>
 
     <properties>
-        <cxf.version>3.1.7</cxf.version>
+        <cxf.version>3.1.14</cxf.version>
     </properties>
 
     <dependencies>
@@ -177,7 +177,6 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.0.31-beta</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -199,6 +198,22 @@
     </dependency>
 	<!-- End WSLongsight only-->
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
