--- a/custom_builds/152/distros/sakai-11.x/pom.xml
+++ b/custom_builds/152/distros/sakai-11.x/pom.xml
@@ -128,8 +128,10 @@
                 <module>clog</module>
                 <module>vericite</module>
                 <module>bbb-tool</module>
-                <!--module>certification</module-->
+                <!--
+                <module>certification</module>
                 <module>gradebook2</module>
+                -->
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
